2010-03-07  vadim  <vadim@vk.crocodile.org>

	* FWWindow.cpp (FWWindow::startupLoad): final (hopefully) design
	of the welcome/startup window. Always showing startup tip dialog;
	added buttons to show "Getting started" and "summary of features"
	to the same dialog window. Fixes #1224

2010-02-28  yalovoy <yalovoy@gmail.com>
	* refs #1202: Main menu "Rules" does not match rule context menu
	Items in the main menu Rules should get disabled and enabled just
	like items in the context menu do.
	Added action: copyRuleAction; cutRuleAction; pasteRuleAboveAction;
     	pasteRuleBelowAction; disableRuleAction; enableRuleAction;
	setColorEmptyAction; setColorRedAction; setColorBlueAction;
	setColorOrangeAction; setColorPurpleAction; setColorGrayAction;
	setColorYellowAction; setColorGreenAction;
	Affected files:
	FWWindow.cpp
	FWBMainWindow_q.ui
	RuleSetView.cpp
	RuleSetView.h

2010-03-07  Roman Bovsunivkiy <a2k0001@gmail.com>

	* ticket #1307 "cluster names in cyrillic appear garbled in
	instDialog list"

	* ticket #1289 "turn off mouse wheel scrolling of tabs in the main
	window MDI area"

	* Ticket #1310 "New slots in startup dialog". Buttons in the startup
	tip dialog connected to slots that open "Getting started" tutorial
	and "Summary of features"

2010-03-06  vadim  <vadim@vk.crocodile.org>

	* FWWindow.cpp (FWWindow::checkForUpgrade): code that checks if
	upgrade is available shows warning dialog no more than once a day.
	Also framework for unit testing of this function. See #1309

2010-03-05  vadim  <vadim@vk.crocodile.org>

	* instDialog_ui_ops.cpp (instDialog::fillCompileSelectList):
	fixed #1305 "Compilation of cluster firewall". when user tries to
	compile a firewall object that is also a cluster member, but did
	not request compilation of the cluster, a warning should be
	presented.

	* fixed #1303 "Improve design of the global Preferences, tab
	Objects"

2010-03-04  vadim  <vadim@vk.crocodile.org>

	* pfAdvancedDialog.cpp (pfAdvancedDialog::doScrubToggled):