@@ -656,11 +656,11 @@
               </widget>
               <widget class="QWidget" name="page_35">
                <layout class="QGridLayout" name="gridLayout_40">
-                <property name="margin">
-                 <number>0</number>
-                </property>
                 <property name="horizontalSpacing">
                  <number>6</number>
+                </property>
+                <property name="margin">
+                 <number>0</number>
                 </property>
                 <item row="0" column="0">
                  <widget class="MetricEditorPanel" name="w_MetricEditorPanel" native="true"/>
@@ -736,7 +736,7 @@
      <x>0</x>
      <y>0</y>
      <width>1144</width>
-     <height>25</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="editMenu">
@@ -780,7 +780,7 @@
      <addaction name="action_getting_started"/>
     </widget>
     <addaction name="helpAboutAction"/>
-    <addaction name="welcome_action"/>
+    <addaction name="summary_action"/>
     <addaction name="helpAction"/>
     <addaction name="release_Notes_Action"/>
     <addaction name="debugAction"/>
@@ -1366,9 +1366,9 @@
     <string>Undo Stack</string>
    </property>
   </action>
-  <action name="welcome_action">
+  <action name="summary_action">
    <property name="text">
-    <string>Welcome</string>
+    <string>Summary of features</string>
    </property>
   </action>
   <action name="action_getting_started">
@@ -2244,10 +2244,10 @@
    </hints>
   </connection>
   <connection>
-   <sender>welcome_action</sender>
+   <sender>summary_action</sender>
    <signal>triggered()</signal>
    <receiver>FWBMainWindow_q</receiver>
-   <slot>showWelcome()</slot>
+   <slot>showSummary()</slot>
    <hints>
     <hint type="sourcelabel">
      <x>-1</x>
@@ -2285,7 +2285,7 @@
   <slot>toggleViewSearch()</slot>
   <slot>editorPanelTabChanged(int)</slot>
   <slot>toggleViewUndo()</slot>
-  <slot>showWelcome()</slot>
+  <slot>showSummary()</slot>
   <slot>showTutorial()</slot>
  </slots>
 </ui>
