@@ -5,7 +5,10 @@
 	added buttons to show "Getting started" and "summary of features"
 	to the same dialog window. Fixes #1224
 
-2010-02-28  yalovoy <yalovoy@gmail.com>
+	* renamed menu item Help/Welcome to Help/Summary of features.
+	fixes #1311
+
+2010-03-07  yalovoy <yalovoy@gmail.com>
 	* refs #1202: Main menu "Rules" does not match rule context menu
 	Items in the main menu Rules should get disabled and enabled just
 	like items in the context menu do.
